# Answers_to_JRAI

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/AStar/lib/AStar/: Astar
install/AStar/share/AStar/: package.bash  package.zsh
install/bt_cpp/lib/bt_cpp/: first_tree  ft
install/bt_cpp/share/ament_index/resource_index/parent_prefix_path/: bt_cpp
install/bt_cpp/share/bt_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bt_cpp/share/bt_cpp/cmake/: bt_cppConfig.cmake
install/bt_ros2/lib/bt_ros2/: sample_client  sample_server
install/bt_ros2/share/ament_index/resource_index/package_run_dependencies/: bt_ros2
install/bt_ros2/share/ament_index/resource_index/parent_prefix_path/: bt_ros2
install/bt_ros2/share/bt_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/btcpp_ros2_samples/lib/btcpp_ros2_samples/: bool_client  bool_server  sample_bt_executor  sleep_client  sleep_client_dyn  sleep_server  subscriber_test
install/btcpp_ros2_samples/share/btcpp_ros2_samples/: local_setup.sh  package.sh
install/interfaces/include/interfaces/interfaces/action/: boiling.h  boiling.hpp  fibonacci.h
install/interfaces/include/interfaces/interfaces/action/detail/: boiling__builder.hpp  boiling__functions.c  boiling__functions.h  boiling__rosidl_typesupport_fastrtps_c.h  boiling__rosidl_typesupport_introspection_cpp.hpp  boiling__struct.h  boiling__struct.hpp  boiling__traits.hpp  boiling__type_support.c  boiling__type_support.cpp  boiling__type_support.h  fibonacci__builder.hpp  fibonacci__functions.c  fibonacci__functions.h  fibonacci__rosidl_typesupport_fastrtps_c.h  fibonacci__rosidl_typesupport_introspection_c.h  fibonacci__struct.h  fibonacci__struct.hpp  fibonacci__traits.hpp  (+2 more)
install/interfaces/include/interfaces/interfaces/srv/: money.h
install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
install/interfaces/share/interfaces/: package.sh
install/interfaces/share/interfaces/action/: Boiling.action  Boiling.idl
install/interfaces/share/interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_interfaces__rosidl_generator_cppExport.cmake  export_interfaces__rosidl_generator_pyExport.cmake  export_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  interfaces__rosidl_typesupport_cExport.cmake  rosidl_cmake-extras.cmake
install/interfaces/share/interfaces/srv/: Money.srv
install/part_one/lib/part_one/: node_1_publisher  node_1_subscriber  node_2_01  node_2_02  node_2_03  node_3_client  node_3_server  node_4_client  node_4_server
install/part_one/share/ament_index/resource_index/package_run_dependencies/: part_one
install/part_one/share/part_one/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/part_one/share/part_one/launch/: part_one.launch.py
log/: latest_build  latest_list
public/doc/: How to install something abiut BehaviorTree.md
public/docs/: How to install something abiut BehaviorTree.md  something_about_nav2.md
src/AStar/: A_star.cpp  A_star.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  problem_review.md
src/bt_cpp/: CMakeLists.txt  package.xml
src/bt_cpp/src/: first_tree.cpp  main.cpp  main_tree.xml  put_in_the_fridge.cpp  put_in_the_fridge.h
src/bt_ros2/: CMakeLists.txt
src/bt_ros2/launch/: bt_ros2.launch.py
src/bt_ros2/src/: fibonacci.cpp  fibonacci.hpp  main_client.cpp  main_server.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Boiling.action
src/interfaces/msg/: Now.msg
src/part_one/: CMakeLists.txt  package.xml  problems_review.md
src/part_one/include/part_one/: boil.h
src/part_one/src/: boil.cpp  node_1_publisher.cpp  node_1_subscriber.cpp  node_2_01.cpp  node_2_02.cpp  node_2_03.cpp  node_3_client.cpp  node_3_server.cpp  node_4_client.cpp  node_4_control.cpp  node_4_main.cpp  node_4_server.cpp
src/pcl/: CMakeLists.txt  pcl_downsampling.cpp
src/sample_bot_cartographer/: CMakeLists.txt  package.xml
src/sample_bot_cartographer/launch/: cartographer.launch.py
src/sample_bot_description/: package.xml  setup.cfg  setup.py
src/sample_bot_description/launch/: display_rviz2.launch.py  gazebo.launch.py
src/sample_bot_description/sample_bot_description/: robot_state_pubsher.py  rotate_wheel.py
src/sample_bot_description/urdf/: bot_base.urdf  bot_gazebo.urdf
src/sample_bot_description/world/: sample_bot.world
src/sample_bot_navigation2/: CMakeLists.txt  package.xml
src/sample_bot_navigation2/launch/: navigation2.launch.py
src/sample_bot_navigation2/maps/: sample_bot_map.pgm  sample_bot_map.yaml
(+27 files in other folders)
